<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="end"/>

            <TextView
                android:id="@+id/name"
                android:text="name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gain"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="end"/>

            <TextView
                android:id="@+id/gain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="gain"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hardware_average"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="end"/>

            <TextView
                android:id="@+id/hardware_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hardware average"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ksps"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="end"/>

            <TextView
                android:id="@+id/ksps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ksps"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/testing"
        android:layout_below="@+id/table_layout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:id="@+id/table_chrono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chrono">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delay"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lapse"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/delay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_hhmmss"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:id="@+id/lapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_hhmmss"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily"
        android:layout_below="@+id/table_chrono"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TableLayout
        android:id="@+id/table_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/daily">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_hhmm"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_hhmm"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

    <CheckBox
        android:text="@string/trigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_daily"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/trigger" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trigger"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/table_trigger">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/trigger_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:text="@string/trigger_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>

            <TextView
                android:text="@string/send_trigger_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_weight="1"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/format_percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trigger_level"
                android:layout_weight="1"
                android:layout_column="0"
                android:gravity="center"/>

            <TextView
                android:text="@string/format_hhmmss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/trigger_time"
                android:layout_weight="1"
                android:layout_column="1"
                android:gravity="center"/>

            <TextView
                android:text="@string/format_hhmm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/send_trigger_time"
                android:layout_weight="1"
                android:layout_column="2"
                android:gravity="center"/>
        </TableRow>

    </TableLayout>

</RelativeLayout>