<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end"/>

        <TextView
            android:text="nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/sensitivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end"/>

        <TextView
            android:text="sensibilidad del geófono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sensitivity"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end"/>

        <TextView
            android:text="latitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lat"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/lng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end"/>

        <TextView
            android:text="longitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lng"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/cta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end"/>

        <TextView
            android:text="cota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cta"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center"/>
    </TableRow>

</TableLayout>