<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/idname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="end" />

        <TextView
            android:text="id del instrumento"
            android:textSize="8sp"
            android:maxLines="1"
            android:maxEms="12"
            android:ellipsize="start"
            android:layout_height="wrap_content"
            android:id="@+id/idname"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:text="@string/phone_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="right" />

        <TextView
            android:text="contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_warning"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:text="@string/time_zone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_column="0"
            android:gravity="right" />

        <TextView
            android:text="zona horaria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxEms="8"
            android:ellipsize="start"
            android:id="@+id/time_zone"
            android:layout_weight="1"
            android:layout_column="1"
            android:gravity="center" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <CheckBox
            android:text="GPRS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gprs"
            android:layout_weight="1"
            android:layout_column="0"
            android:textSize="14sp" />

        <CheckBox
            android:text="GPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gps"
            android:layout_weight="1"
            android:layout_column="1"
            android:textSize="14sp" />

        <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call"
            android:layout_weight="1"
            android:layout_column="2"/>

    </TableRow>

</TableLayout>